--- a/static/index.html
+++ b/static/index.html
@@ -8,15 +8,15 @@
 </head> 
 <body>
     <div class="container">
-        <h1>メトリクスグラフ</h1>
+        <h1>各CPUの状態別グラフ</h1>
 
         <div class="chart-container">
-            <div class="chart-title">CPU負担平均</div>
+            <div class="chart-title">〇〇〇〇〇</div>
             <canvas id="cpuLoadChart"></canvas>
         </div>
 
         <div class="chart-container">
-            <div class="chart-title">CPU時間</div>
+            <div class="chart-title">〇〇〇〇〇</div>
             <canvas id="cpuTimeChart"></canvas>
         </div>
 
@@ -40,26 +40,6 @@
                 return null;
             }
         }
-        //データ処理
-        function processMetricsData(data) {
-            //cpuLoadは時間順のデータ、{}は順序の概念がないので[]を使用！
-            const processed = { cpuLoad:[], cputime: {} }
-
-            data.data.forEach(item => {
-                const time = new Date(item.ccreated_at).toLacalTimeString('ja-JP');
-            //ここから続き！
-
-        }
-
-        loadMetricsData().then(data => {
-            if(data) {
-                const processedData = processMetricsData(data);
-                createCpuLoadChart(processedData);
-                createCpuTimeChart(processedData);
-                console.log('取得したデータ：', data);
-            }
-        });
-
     </script>                    
 </body>
 </html>
