--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
             <canvas id="cpuLoadChart"></canvas>
         </div>
 
-
+        <!-- この実装は未着手！　-->
         <div class="buttons">
             <button id="refreshButton">更新</button>
             <button id="downloadButton">ダウンロード</button>
