--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -10,18 +10,16 @@
     <div class="container">
         <h1>各CPUの状態別グラフ</h1>
         <!-- 全体グラフ -->
-        <div class = "whole">
-            <div class = "chart-container">
-                <div class = "chart-title">CPU使用率推移</div>
+        <div class = "chart-container">
+            <div class = "whole">
+                <div style = "font-size:24px; margin-left: 10px;"><strong>CPU使用率推移</strong></div>
                 <canvas id = "cpuLoadChart"></canvas>
-                </div>
             </div>
-        </div>
-
         <!-- 拡大グラフ -->
-        <div class = "expansion">
-            <div class="chart-title">CPU使用率推移(拡大)</div>
-            <canvas id="cpuLoadChartZoom"></canvas>
+            <div class = "expansion" style = "margin-top:30px;">
+                <div style = "font-size:24px; margin-left: 10px;"><strong>CPU使用率推移(拡大)</strong></div>
+                <canvas id="cpuLoadChartZoom"></canvas>
+            </div>
         </div>
 
         <!-- この実装は未着手！　-->
