--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -12,12 +12,12 @@
         <!-- 全体グラフ -->
         <div class = "chart-container">
             <div class = "whole">
-                <div style = "font-size:24px; margin-left: 10px;"><strong>CPU使用率推移</strong></div>
+                <div style = "font-size:24px; margin-left: 10px; background-color: #fff;"><strong>CPU使用率推移</strong></div>
                 <canvas id = "cpuLoadChart"></canvas>
             </div>
         <!-- 拡大グラフ -->
             <div class = "expansion" style = "margin-top:30px;">
-                <div style = "font-size:24px; margin-left: 10px;"><strong>CPU使用率20%以下拡大</strong></div>
+                <div style = "font-size:24px; margin-left: 10px; background-color: #fff;"><strong>CPU使用率20%以下拡大</strong></div>
                 <canvas id="cpuLoadChartZoom"></canvas>
             </div>
         </div>
