--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <div class="container">
-        <h1>各CPUの状態別グラフ</h1>
+        <h1 style ="color: gray;">各CPUの状態別グラフ</h1>
         <!-- 全体グラフ -->
-        <div class ="chart-container" style ="margin: 0 auto;">
-            <div class = "whole" style = "margin-top:15px; padding: 0 10px 0 10px;">
-                <div style = "font-size:24px; margin-top: 5px;"><strong>CPU使用率推移</strong></div>
-                <canvas id = "cpuLoadChart" styke="margin-top: 10px;"></canvas>
+        <div class ="chart-container">
+            <div class = "whole">
+                <div style = "display: flex; align-items: center;  margin-bottom: 10px;">
+                    <span style = "color: gray; font-size: 28px; font-weight: bold;">CPU使用率推移</span> 
+                <select id ="modeSelector" style ="color: gray; margin-left: 20px; padding: 5px 20px; font-size: 16px;">
+                <option value="realtime">リアルタイム</option>
+                <option value="10minutes">10分間隔</option>
+                <option value="1hour">1時間間隔</option>
+            </select>
             </div>
+            <canvas id = "cpuLoadChart" style="margin-top: 20px; padding: 10px;"></canvas>
         </div>
-
-        <!-- この実装は未着手！　-->
-        <!--<div class="buttons">
-            <button id="refreshButton">更新</button>
-            <button id="downloadButton">ダウンロード</button>
-        </div> 
-    </div> -->
+    </div>    
 
     <!-- Chart.js本体の読み込み -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
