各モードでのJS実装

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -9,12 +9,11 @@
 <body>
     <div class="container">
         <h1 style ="color: gray;">各CPUの状態別グラフ</h1>
-        <!-- 全体グラフ -->
         <div class ="chart-container">
             <div class = "whole">
                 <div style = "display: flex; align-items: center;  margin-bottom: 10px;">
                     <span style = "color: gray; font-size: 28px; font-weight: bold;">CPU使用率推移</span> 
-                <select id ="modeSelector" style ="color: gray; margin-left: 20px; padding: 5px 20px; font-size: 16px;">
+                <select id ="modeSelect" style ="color: gray; margin-left: 20px; padding: 5px 20px; font-size: 16px;">
                 <option value="realtime">リアルタイム</option>
                 <option value="10minutes">10分間隔</option>
                 <option value="1hour">1時間間隔</option>
