生データテーブルと加工テーブルの追加

--- a/data/jsonl_viewer.html
+++ b/data/jsonl_viewer.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>JSONLファイル構造ビューア</h1>
+    <h1>JSONLファイル構造ビューアー</h1>
     <p>総行数: 14</p><div class="line-header">--- 行 1 ---</div><div class="json-content"><pre>{
   "resourceMetrics": [
     {
