html、JavaScript連携に伴うワード訂正

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -28,7 +28,7 @@
                 <div id ="customRangeInputs" style ="display : none;">
                     <input type="daytime-local" id="startTime">
                     <input type="daytime-local" id="endTime">
-                    <button onclick="fetchCustomRange()">表示</button> 
+                    <button onclick="fetchCustomRange()">表示</button> <!-- ボタンクリックでユーザー指定範囲のデータに切り替える -->
                 </div>
                 <select id ="cpuSelector" style ="color: gray; margin-left: 20px; padding: 5px 30px; font-size: 16px;">
                     <option value="cpu_number">CPU0</option>
