--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/faker@5.5.3/dist/faker.min.js"></script> <!-- Faker.jsの読み込み -->
     <title>メトリクスグラフ</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +15,7 @@
                 <div style = "display: flex; align-items: center;  margin-bottom: 10px;">
                     <span style = "color: gray; font-size: 28px; font-weight: bold;">CPU使用率推移</span> 
                 <select id ="modeSelect" style ="color: gray; margin-left: 20px; padding: 5px 20px; font-size: 16px;">
-                    <option value="realtime">REALTIME(10min)</option>
+                    <option value="realtime">realtime(10min)</option>
                     <option value="30minutes">30minutes</option>
                     <option value="1hour">1hour</option>
                     <option value="1day">1day</option>
